Control plane auth
